[tool.poetry]
name = "xeniadbutilities"
version = "0.1.3"
description = ""
authors = ["DANRAMAGE <ChiefDan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2024.1"
sqlalchemy = "^2.0.32"
geoalchemy2 = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
